# CivicDesk_RL_Model

./: Dockerfile  README.md  __init__.py  benchmark.py  benchmark_results.json  client.py  dashboard.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  ticket_bank.py  train_rl.py
openenv_civic_desk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
server/: Dockerfile  __init__.py  app.py  civic_desk_environment.py  gym_env.py
